; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dml/extr_display_mode_lib.c_dml_init_instance.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dml/extr_display_mode_lib.c_dml_init_instance.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.display_mode_lib = type { i32, i32, %struct._vcs_dpi_ip_params_st, %struct._vcs_dpi_soc_bounding_box_st }
%struct._vcs_dpi_ip_params_st = type { i32 }
%struct._vcs_dpi_soc_bounding_box_st = type { i32 }

@dml20_funcs = common dso_local global i32 0, align 4
@dml20v2_funcs = common dso_local global i32 0, align 4
@dml21_funcs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dml_init_instance(%struct.display_mode_lib* %0, %struct._vcs_dpi_soc_bounding_box_st* %1, %struct._vcs_dpi_ip_params_st* %2, i32 %3) #0 {
  %5 = alloca %struct.display_mode_lib*, align 8
  %6 = alloca %struct._vcs_dpi_soc_bounding_box_st*, align 8
  %7 = alloca %struct._vcs_dpi_ip_params_st*, align 8
  %8 = alloca i32, align 4
  store %struct.display_mode_lib* %0, %struct.display_mode_lib** %5, align 8
  store %struct._vcs_dpi_soc_bounding_box_st* %1, %struct._vcs_dpi_soc_bounding_box_st** %6, align 8
  store %struct._vcs_dpi_ip_params_st* %2, %struct._vcs_dpi_ip_params_st** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load %struct.display_mode_lib*, %struct.display_mode_lib** %5, align 8
  %10 = getelementptr inbounds %struct.display_mode_lib, %struct.display_mode_lib* %9, i32 0, i32 3
  %11 = load %struct._vcs_dpi_soc_bounding_box_st*, %struct._vcs_dpi_soc_bounding_box_st** %6, align 8
  %12 = bitcast %struct._vcs_dpi_soc_bounding_box_st* %10 to i8*
  %13 = bitcast %struct._vcs_dpi_soc_bounding_box_st* %11 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %12, i8* align 4 %13, i64 4, i1 false)
  %14 = load %struct.display_mode_lib*, %struct.display_mode_lib** %5, align 8
  %15 = getelementptr inbounds %struct.display_mode_lib, %struct.display_mode_lib* %14, i32 0, i32 2
  %16 = load %struct._vcs_dpi_ip_params_st*, %struct._vcs_dpi_ip_params_st** %7, align 8
  %17 = bitcast %struct._vcs_dpi_ip_params_st* %15 to i8*
  %18 = bitcast %struct._vcs_dpi_ip_params_st* %16 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %17, i8* align 4 %18, i64 4, i1 false)
  %19 = load i32, i32* %8, align 4
  %20 = load %struct.display_mode_lib*, %struct.display_mode_lib** %5, align 8
  %21 = getelementptr inbounds %struct.display_mode_lib, %struct.display_mode_lib* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* %8, align 4
  switch i32 %22, label %23 [
  ]

23:                                               ; preds = %4
  br label %24

24:                                               ; preds = %23
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
